--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true        # Hiển thị log SQL khi phát triển
     properties:
       hibernate:
@@ -16,3 +16,8 @@ spring:
 server:
   address: 0.0.0.0
   port: 8080
+
+logging:
+  level:
+    root: INFO # Mức log mặc định
+    com.khaikin: DEBUG # Ghi log chi tiết cho package của bạn
