--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/delivery_management
     username: root
-    password: Deptrai4@
+    password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
