--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/delivery_management
     username: khai
-    password: deptrai4
+    password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
